Refactoring callendar and assignment component

--- a/Student-Productivity/src/app/assignment/assignment-create/assignment-create.component.css
+++ b/Student-Productivity/src/app/assignment/assignment-create/assignment-create.component.css
@@ -12,6 +12,7 @@ div {
     /* font-family: 'Darker Grotesque', sans-serif;; */
     font-size: 1.2rem;
     border-radius: 5px;
+    margin: 10px;
 }
 
 .submit .button:hover{
@@ -23,48 +24,30 @@ div {
 }
 
 .create {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 10px;
     border: 2px solid #ee6c4d;
     border-radius: 25px;
     color: #293241;
     width: 60%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
+    margin-top: 10%;
 }
 
-label, input{
-    
-    /* font-family: 'Delius', cursive; */
+
+.assignment-create-input{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; 
+}
+
+label, input, select{
     font-size: 1.1rem;
     color: #293241;
-    margin-bottom: .5rem;
-    margin-right: .5rem;
+    padding: 0;
+    margin-right: 1rem;
+    width: 200px;
 }
 
-.upcoming {
-    border: 2px solid #ee6c4d;
-    border-radius: 25px;
-    color: #293241;
-    width: 60%;
-    margin-bottom: 5%;
-}
-
-.completed {
-    border: 2px solid #ee6c4d;
-    border-radius: 25px;
-    color: #293241;
-    width: 60%;
-}
-
-table{
-    margin: auto;
-    color: #293241;
-}
-
-th {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-td {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
