--- a/Student-Productivity/src/app/calendar/calendar.component.css
+++ b/Student-Productivity/src/app/calendar/calendar.component.css
@@ -48,4 +48,5 @@
     background-color: rgb(152, 193, 217);
     padding: 2%;
     font-family: 'Darker Grotesque', sans-serif;
+    /* eventBackgroundColor: red; */
   }
