--- a/Student-Productivity/src/app/calendar/calendar.component.html
+++ b/Student-Productivity/src/app/calendar/calendar.component.html
@@ -1,6 +1,4 @@
 <div class= "container">
-    <full-calendar [options]="calendarOptions">
-      
-    </full-calendar>
+    <full-calendar [options]="calendarOptions"></full-calendar>
     
     </div>
